--- a/marketeiro.html
+++ b/marketeiro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,18 +15,14 @@
             <a href="index.html">Home</a>
             <a href="compProdutos.html">Produtos</a>
             <a href="carrinho.html">Carrinho</a>
-            <a href="marketeiro.html">marketeiro</a>
+            <a href="marketeiro.html">Marketeiro</a>
         </nav>
-        <div class="carrinho">
-            <span id="carrinho-contagem">0</span>
-            <img src="./img/cart-icon.png" alt="Carrinho de Compras">
-        </div>
     </header>
 
-    <main>
+    <main class="main-container">
         <section class="marketeiro">
             <div class="container">
-                <h1>Texto Marketeiro</h1>
+                <h1 class="text-center">Texto Marketeiro</h1>
                 <form id="marketeiroForm">
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome" required>
@@ -56,15 +52,26 @@
                     <label for="motivo">Motivo do Contato:</label>
                     <textarea id="motivo" name="motivo" rows="4" required></textarea>
 
-                    <button type="submit" onclick="submeterDados()">Enviar</button>
+                    <button type="submit">Enviar</button>
                 </form>
             </div>
         </section>
+
+        
+        <section id="resultado">
+            <h2>Resultado do Perfil Profissional</h2>
+            <template id="template-card">
+                <div class="card">
+                    <p class="card-text"></p>
+                </div>
+            </template>
+        </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Minha Loja de Informática - Todos os direitos reservados</p>
     </footer>
+
     <script src="./scripts/script.js"></script>
 
 </body>
